# mcp-rugpull-demo

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
src/: app.py  cli.py
src/common/: config.py  utils.py
src/libs/: common_tools_mcp.py  malicious_mcp_rugpull.py  mcp_model_sampling.py
src/static/: lab1.html
