[project]
name = "mcp-rugpull-demo"
version = "0.1.1"
description = "A demo MCP server to illustrate a Rug Pull attack in a controlled, educational way."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CplusHua" }
]
dependencies = [
    "fastmcp>=2.12.3",
    "mcp[cli]>=1.6.0",
    "openpyxl==3.1.5",
    #    "pandas==2.3.0",
    "pysocks==1.7.1",
    "python-dotenv~=1.1.0",
    "requests~=2.32.3",
]

[project.scripts]
mcp_rugpull = "app:run_server_mcp_rugpull"
mcp_sampling = "app:run_server_mcp_sampling"
mcp_evil_add = "app:run_server_mcp_evil_add"
mcp_weather = "app:run_server_mcp_get_weather"


[tool.uv]



[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
